--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer footer-home">
   <div class="container">
     <nav class="footer-nav">
-      <a class="footer-nav-item" href="{{ site.baseurl }}/">{{ site.title }}</a>
-      <a class="footer-nav-item" href="{{ site.baseurl }}/blog/">Blog</a>
+      <a class="footer-nav-item" href="https://pogodev.org//">PogoDev</a>
+      <a class="footer-nav-item" href="/">Blog</a>
       <a class="footer-nav-item" href="https://docs.pogodev.org/">Docs</a>
       <a class="footer-nav-item" href="https://discordapp.com/invite/dKTSHZC">Discord</a>
       <a class="footer-nav-item" href="https://talk.pogodev.org/">Forum</a>
