--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,7 @@
     </a>
 
     <nav class="site-header-nav">
-      {% capture first_segment %}{{ page.url | remove_first: "/" | split: "/" | first }}{% endcapture %}
-      <a class="site-header-nav-item {% if first_segment == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/blog/">Blog</a>
+      <a class="site-header-nav-item active" href="/">Blog</a>
       <a class="site-header-nav-item" href="https://docs.pogodev.org/">Docs</a>
       <a class="site-header-nav-item" href="https://discordapp.com/invite/dKTSHZC">Discord</a>
       <a class="site-header-nav-item" href="https://talk.pogodev.org/">Forum</a>
