Add some darkness

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer {% if page.permalink == '/' %}footer-home{% endif %}">
+<footer class="footer footer-home">
   <div class="container">
     <nav class="footer-nav">
       <a class="footer-nav-item" href="{{ site.baseurl }}/">{{ site.title }}</a>
