--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -16,7 +16,7 @@
   color: $main-color-strong;
   &:hover {
     text-decoration: none;
-    color: $main-link-color;
+    color: $header-color;
   }
 }
 
