--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -1,61 +1,65 @@
-.highlight .hll { background-color: #ffffcc }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { color: #000000; font-weight: bold } /* Keyword */
-.highlight .o { color: #000000; font-weight: bold } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #999999 } /* Generic.Heading */
-.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #555555 } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
-.highlight .gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d01040 } /* Literal.String */
-.highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
-.highlight .no { color: #008080 } /* Name.Constant */
-.highlight .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
-.highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nl { color: #990000; font-weight: bold } /* Name.Label */
-.highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d01040 } /* Literal.String.Backtick */
-.highlight .sc { color: #d01040 } /* Literal.String.Char */
-.highlight .sd { color: #d01040 } /* Literal.String.Doc */
-.highlight .s2 { color: #d01040 } /* Literal.String.Double */
-.highlight .se { color: #d01040 } /* Literal.String.Escape */
-.highlight .sh { color: #d01040 } /* Literal.String.Heredoc */
-.highlight .si { color: #d01040 } /* Literal.String.Interpol */
-.highlight .sx { color: #d01040 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d01040 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+/* adjusted to give override background and text colour */
+.highlight pre, pre, .highlight .hll {
+  // background-color: $hero-bg-color;
+  color: #fff;
+}
+.c     { color: #5b6370; font-style: italic } // comment
+.err   { color: #960050; background-color: #1e0010; } // error
+.k     { color: #c776df; font-weight: bold; } // keyword
+.o     { font-weight: bold } // operator
+.cm    { color: #5b6370; font-style: italic } // comment.multiline
+.cp    { color: #5b6370; font-weight: bold } // comment.preproc
+.c1    { color: #5b6370; font-style: italic } // comment.single
+.cs    { color: #5b6370; font-weight: bold; font-style: italic } // comment.special
+.gd    { color: #000; background-color: #fdd } // generic.deleted
+.gd .x { color: #000; background-color: #faa } // generic.deleted.specific
+.ge    { font-style: italic } // generic.emph
+.gr    { color: #a00 } // generic.error
+.gh    { color: #5b6370 } // generic.heading
+.gi    { color: #a6e22e; background-color: #dfd } // generic.inserted
+.gi .x { color: #a6e22e; background-color: #afa } // generic.inserted.specific
+.go    { color: #888 } // generic.output
+.gp    { color: #555 } // generic.prompt
+.gs    { font-weight: bold } // generic.strong
+.gu    { color: #aaa } // generic.subheading
+.gt    { color: #a00 } // generic.traceback
+.kc    { font-weight: bold } // keyword.constant
+.kd    { color: #c776df; font-weight: bold } // keyword.declaration
+.kp    { font-weight: bold } // keyword.pseudo
+.kr    { font-weight: bold } // keyword.reserved
+.kt    { color: #458; font-weight: bold } // keyword.type
+.m     { color: #4fb6c3 } // literal.number
+.s     { color: #a2bd40 } // literal.string
+.na    { color: #e2964a } // name.attribute
+.nb    { color: #4fb6c3 } // name.builtin
+.nc    { color: #e2964a; font-weight: bold } // name.class
+.nd    { color: #4fb6be; } // name.decorator
+.no    { color: #4fb6be } // name.constant
+.ni    { color: #e2964a } // name.entity
+.ne    { color: #900; font-weight: bold } // name.exception
+.nf    { color: #52a5eb; font-weight: bold } // name.function
+.nn    { color: #555 } // name.namespace
+.nt    { color: #de5442 } // name.tag
+.nv    { color: #de5442 } // name.variable
+.ow    { font-weight: bold } // operator.word
+.w     { color: #bbb } // text.whitespace
+.mf    { color: #4fb6c3 } // literal.number.float
+.mh    { color: #4fb6c3 } // literal.number.hex
+.mi    { color: #4fb6c3 } // literal.number.integer
+.mo    { color: #4fb6c3 } // literal.number.oct
+.sb    { color: #a2bd40 } // literal.string.backtick
+.sc    { color: #a2bd40 } // literal.string.char
+.sd    { color: #5b6370 } // literal.string.doc
+.s2    { color: #a2bd40 } // literal.string.double
+.se    { color: #a2bd40 } // literal.string.escape
+.sh    { color: #a2bd40 } // literal.string.heredoc
+.si    { color: #a2bd40 } // literal.string.interpol
+.sx    { color: #a2bd40 } // literal.string.other
+.sr    { color: #009926 } // literal.string.regex
+.s1    { color: #a2bd40 } // literal.string.single
+.ss    { color: #990073 } // literal.string.symbol
+.bp    { color: #999 } // name.builtin.pseudo
+.vc    { color: #008080 } // name.variable.class
+.vg    { color: #008080 } // name.variable.global
+.vi    { color: #008080 } // name.variable.instance
+.il    { color: #4fb6c3 } // literal.number.integer.long
