--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,15 @@ layout: default
         <h1>{{ page.title }}</h1>
 
         <div class="who-when">
+          <a href="/" class="author-link back-link">
+            <span class="fa fa-arrow-left"></span>
+            <span class="label">Back to the blog</span>
+          </a>
           <span class="fa fa-calendar"></span><time>{{ page.date | date: '%B %d, %Y' }}</time>
           <a href="https://github.com/{{ page.author }}" class="author-link">
             <img src="https://github.com/{{ page.author }}.png?size=36" alt="{{ page.author }}" class="avatar">{{ page.author }}
           </a>
-          <a href="{{ site.baseurl }}/feed.xml" class="author-link">
+          <a href="{{ site.baseurl }}/feed.xml" class="author-link rss-link">
             <span class="fa fa-rss"></span>
             <span class="label">RSS Feed</span>
           </a>
